--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,29 @@
-# Ignore everything
-*
 
-# But not these files...
+# ignore everything in the root except the "wp-content" directory.
+/*
+!wp-content/
 !.gitignore
-!wp-content/themes/youthforum/
-# etc...
 
-# ...even if they are in subdirectories
+# ignore everything in the "wp-content" directory, except:
+# mu-plugins, plugins, and themes directories
+wp-content/*
+!wp-content/themes/
+wp-content/themes/*
+!wp-content/themes/youthforum
 
 
-# if the files to be tracked are in subdirectories
+
+# ignore these plugins
+# wp-content/plugins/hello.php
+
+# ignore specific themes
+# wp-content/themes/twenty*/
+
+# ignore node dependency directories
+node_modules/
+
+# ignore log files and databases
+*.log
+*.sql
+*.sqlite
+
