--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ wp-content/*
 !wp-content/themes/
 wp-content/themes/*
 !wp-content/themes/youthforum
+!wp-content/themes/youthforum/*
+
 
 
 
@@ -23,7 +25,7 @@ wp-content/themes/*
 node_modules/
 
 # ignore log files and databases
-*.log
-*.sql
-*.sqlite
+# *.log
+# *.sql
+# *.sqlite
 
